# pond

./: .gitignore  CMakeLists.txt  \  app.cpp  app.h  bezier_filled.cpp  bezier_filled.h  compute_shader.h  defs.h  fish.cpp  fish.h  fishHandler.cpp  fishHandler.h  fishRenderer.cpp  fishRenderer.h  glad.c  global.cpp  global.h  main.cpp  readme.md  serializer.cpp  serializer.h  setup.cpp  setup.h  shader.h  texture.cpp  texture.h
.cache/clangd/index/: bezier_filled.cpp.7351D3BCD5E1CF8A.idx  bezier_filled.h.30C1726D5693181D.idx  compute_shader.h.B6C7BE510C0E0A61.idx  fish.cpp.6901AA927C03C57B.idx  fish.h.F4F726E560E7C5BF.idx  fishHandler.cpp.554595B99199AFB9.idx  fishHandler.h.30C029F18EFB661A.idx  fishRenderer.cpp.6F9609C485A73A54.idx  fishRenderer.h.A15D0E53BED49122.idx  glad.c.258B97BA189F2721.idx  glad.h.6CE5EED1F797E86C.idx  global.cpp.4A6BAFF2B1CED038.idx  global.h.8166801947A1A372.idx  main.cpp.E474210557210320.idx  shader.h.28A23BBDBA538B46.idx  stb_image.cpp.A88472ED6729541C.idx  stb_image.h.A2FB15CFDFBEA0F4.idx  texture.cpp.4C81650E4E7FC1F1.idx  texture.h.C98B90DA7A9A0514.idx
data/: data.txt
freetype/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-cc.mk  unix-def.mk
freetype/objs/: autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  truetype.lo  (+4 more)
freetype/objs/.libs/: libfreetype.lai  libfreetype.so.6.20.1
shaders/: c_fish.glsl  c_test.glsl  f_background.glsl  f_bezier.glsl  f_body.glsl  f_screen.glsl  f_shader.glsl  f_solid.glsl  v_bezier.glsl  v_fin.glsl  v_shader.glsl  v_solid.glsl
